Embedded/Lab7/embedded_sw/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:49:52 **** Build of configuration Default for project axi4Demo ****
make all 
CC src/main.c
CC ../common/start.S
CC ../common/trap.S
LD axi4Demo
Memory region         Used Size  Region Size  %age Used
             ram:        2720 B         4 KB     66.41%
21:50:53 **** Incremental Build of configuration Default for project axi4Demo ****
make all 
make: Nothing to be done for 'all'.
21:51:05 **** Incremental Build of configuration Default for project axi4Demo ****
make all 
make: Nothing to be done for 'all'.
21:51:40 **** Incremental Build of configuration Default for project axi4Demo ****
make all 
make: Nothing to be done for 'all'.
21:53:12 **** Incremental Build of configuration Default for project axi4Demo ****
make all 
make: Nothing to be done for 'all'.
21:53:51 **** Incremental Build of configuration Default for project axi4Demo ****
make all 
CC src/main.c
LD axi4Demo
Memory region         Used Size  Region Size  %age Used
             ram:        2720 B         4 KB     66.41%
23:29:59 **** Build of configuration Default for project axi4Demo ****
make all 
CC src/main.c
src/main.c: In function 'main':
src/main.c:232:1: error: expected declaration or statement at end of input
 }
 ^
make: *** [../common/standalone.mk:56: build/obj_files/main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
23:30:55 **** Incremental Build of configuration Default for project axi4Demo ****
make all 
CC src/main.c
LD axi4Demo
Memory region         Used Size  Region Size  %age Used
             ram:        2560 B         4 KB     62.50%
23:31:24 **** Incremental Build of configuration Default for project axi4Demo ****
make all 
make: Nothing to be done for 'all'.
23:31:33 **** Incremental Build of configuration Default for project axi4Demo ****
make all 
make: Nothing to be done for 'all'.
23:35:19 **** Incremental Build of configuration Default for project axi4Demo ****
make all 
make: Nothing to be done for 'all'.
23:35:42 **** Incremental Build of configuration Default for project axi4Demo ****
make all 
make: Nothing to be done for 'all'.
23:35:48 **** Incremental Build of configuration Default for project axi4Demo ****
make all 
make: Nothing to be done for 'all'.
17:24:00 **** Incremental Build of configuration Default for project axi4Demo ****
make all 
make: Nothing to be done for 'all'.
